# ag_demo_client

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AG_manual_ru.md  ALPN_TROUBLESHOOTING_STEPS.md  AUDIOKIT_DEV_SF_SETUP.md  AUDIOKIT_DEV_SF_SUPPORT_REQUEST.md  AUDIOKIT_DEV_SF_TEST_RESULTS.md  CERTIFICATE_ANALYSIS_MACOS.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  ENGLISH_TTS_USAGE.md  IP_ADDRESS_FINDINGS.md  LOGGING_SYSTEM_README.md  LOGGING_USAGE_EXAMPLES.py  Makefile  PUNCTUATOR_SUCCESS.md  RAW_SERVER_RESPONSES.md  README.md  README_LOGGING_SECTION.md  REQUEST_RESPONSE_JSON.json  REQUEST_RESPONSE_PAIRS.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_SETUP.md  TROUBLESHOOTING_RESULTS.md  UNIVERSAL_LOGGING_SYSTEM_README.md  WinCAG2ANDclass2root.pem  audio_converter.py  combined_certs_macos.pem  config.ini  config_audiokit_dev_sf.ini  custom_logging_example.py  improvements.md  intercept_tts_request.py  pyproject.toml  readme.txt  requests.md  requirements.txt  run_integration_tests.py  test_all_operations_logging.py  test_alpn_with_logs.py  (+6 more)
.github/workflows/: ci.yml
Demo_Roskvartal/2ch_wav/: process_dialogues.py
SPK-13769/: infer_from_json.py  select.json
audiogram_cli/: main.py
audiogram_client/: models_service.py  universal_logged_client.py
audiogram_client/asr/: __init__.py  file_recognize.py  get_models_info.py  logged_recognize.py  recognize.py
audiogram_client/audio_archive/: __init__.py  __main__.py  get_requests.py  logged_archive.py  save_audio.py  save_transcript.py  save_vad_marks.py
audiogram_client/common_utils/: arguments.py  audio.py  auth.py  config.py  errors.py  grpc.py  logging_config.py  types.py
audiogram_client/genproto/: response_header_pb2.py  response_header_pb2_grpc.py  stt_pb2.py  stt_pb2.pyi  stt_pb2_grpc.py  stt_pb2_grpc.pyi  stt_response_pb2.py  stt_response_pb2_grpc.py  tts_pb2.py  tts_pb2.pyi  tts_pb2_grpc.py  tts_pb2_grpc.pyi  voice_cloning_pb2.py  voice_cloning_pb2_grpc.py
audiogram_client/models/: logged_service.py
audiogram_client/tts/: __init__.py  get_models_info.py  logged_synthesize.py  stream_synthesize.py  synthesize.py
audiogram_client/voice_cloning/: clone_voice.py  delete_voice.py  get_task_info.py  logged_clone.py
clients/: git_changes.py  main.py
clients/asr/: file_recognize.py  get_models_info.py  recognize.py
clients/audio_archive/: __init__.py  get_requests.py  save_audio.py  save_transcript.py  save_vad_marks.py
docs/: architecture.md  cli.md  quickstart.md  text-doc-en.txt  text-doc-ru.txt
logs/: tts_structured.jsonl
proto/: stt.proto  tts.proto  voice_cloning.proto
scripts/: gen_proto.sh
tests/: conftest.py  test_cli.py  test_integration.py
(+41 files in other folders)
