[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-clients"
version = "0.1.0"
description = "MTS AI Demo Clients"
requires-python = ">=3.8"
dependencies = [
    "grpcio>=1.59.3",
    "protobuf>=4.25.3",
    "python-keycloak>=3.7.0",
    "click>=8.1.7",
    "tabulate>=0.9.0",
    "dynaconf[ini]>=3.2.4",
    "python-dotenv>=1.0.0",
    "urllib3>=2.0.0"
]

[tool.setuptools]
packages = ["clients"] 